# hipBLAS

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  Jenkinsfile.backup  LICENSE.md  README.md  build_log  bump_develop_version.sh  bump_master_version.sh  bump_staging_version.sh  conf.py  header.hpp.in  install.sh  rdeps.py  rdeps.xml  rmake.py  rtest.py  rtest.xml  toolchain-linux.cmake  toolchain-windows.cmake
clients/: CMakeLists.txt
clients/benchmarks/: CMakeLists.txt  client.cpp  program_options.hpp
clients/cmake/: build-options.cmake
clients/common/: arg_check.cpp  argument_model.cpp  blis_interface.cpp  cblas_interface.cpp  clients_common.cpp  flops.cpp  hipblas_arguments.cpp  hipblas_datatype2string.cpp  hipblas_gentest.py  hipblas_parse_data.cpp  hipblas_template_specialization.cpp  host_alloc.cpp  near.cpp  norm.cpp  unit.cpp  utility.cpp
clients/gtest/: CMakeLists.txt  asum_gtest.cpp  asum_gtest.yaml  auxiliary_gtest.cpp  axpy_ex_gtest.cpp  blas1_ex_gtest.cpp  blas1_gtest.cpp  client.cpp  dgmm_gtest.cpp  dot_ex_gtest.cpp  gbmv_batched_gtest.cpp  gbmv_gtest.cpp  gbmv_strided_batched_gtest.cpp  geam_gtest.cpp  gels_batched_gtest.cpp  gels_gtest.cpp  gels_strided_batched_gtest.cpp  gemm_batched_gtest.cpp  gemm_ex_gtest.cpp  gemm_gtest.cpp  gemm_strided_batched_gtest.cpp  gemv_batched_gtest.cpp  gemv_gtest.cpp  gemv_strided_batched_gtest.cpp  geqrf_batched_gtest.cpp  geqrf_gtest.cpp  geqrf_strided_batched_gtest.cpp  ger_gtest.cpp  getrf_batched_gtest.cpp  getrf_gtest.cpp  getrf_strided_batched_gtest.cpp  getri_batched_gtest.cpp  getri_gtest.cpp  getri_strided_batched_gtest.cpp  getrs_batched_gtest.cpp  getrs_gtest.cpp  getrs_strided_batched_gtest.cpp  hbmv_gtest.cpp  hemm_gtest.cpp  hemv_batched_gtest.cpp  (+43 more)
clients/gtest/aux/: auxiliary_gtest.cpp  set_get_matrix_vector_gtest.cpp  set_get_mode_gtest.cpp  set_get_mode_gtest.yaml
clients/gtest/auxil/: set_get_mode_gtest.cpp  set_get_mode_gtest.yaml
clients/gtest/blas1/: asum_gtest.cpp  asum_gtest.yaml  axpy_gtest.cpp  axpy_gtest.yaml  copy_gtest.cpp  copy_gtest.yaml  dot_gtest.cpp  dot_gtest.yaml  iamaxmin_gtest.cpp  iamaxmin_gtest.yaml  nrm2_gtest.cpp  nrm2_gtest.yaml  rot_gtest.cpp  rot_gtest.yaml  scal_gtest.cpp  scal_gtest.yaml  swap_gtest.cpp  swap_gtest.yaml
clients/gtest/blas2/: gbmv_gtest.cpp  gbmv_gtest.yaml  gemv_gtest.cpp  gemv_gtest.yaml  ger_gtest.cpp  ger_gtest.yaml  hbmv_gtest.cpp  hbmv_gtest.yaml  hemv_gtest.cpp  hemv_gtest.yaml  her2_gtest.cpp  her2_gtest.yaml  her_gtest.cpp  her_gtest.yaml  hpmv_gtest.cpp  hpmv_gtest.yaml  hpr2_gtest.cpp  hpr2_gtest.yaml  hpr_gtest.cpp  hpr_gtest.yaml  sbmv_gtest.cpp  sbmv_gtest.yaml  spmv_gtest.cpp  spmv_gtest.yaml  spr2_gtest.cpp  spr2_gtest.yaml  spr_gtest.cpp  spr_gtest.yaml  symv_gtest.cpp  symv_gtest.yaml  syr2_gtest.cpp  syr2_gtest.yaml  syr_gtest.cpp  syr_gtest.yaml  tbmv_gtest.cpp  tbmv_gtest.yaml  tbsv_gtest.cpp  tbsv_gtest.yaml  tpmv_gtest.cpp  tpmv_gtest.yaml  (+6 more)
clients/gtest/blas3/: dgmm_gtest.cpp  dgmm_gtest.yaml  geam_gtest.cpp  geam_gtest.yaml  gemm_gtest.cpp  gemm_gtest.yaml  hemm_gtest.cpp  hemm_gtest.yaml  her2k_gtest.cpp  her2k_gtest.yaml  herk_gtest.cpp  herk_gtest.yaml  herkx_gtest.cpp  herkx_gtest.yaml  symm_gtest.cpp  symm_gtest.yaml  syr2k_gtest.cpp  syr2k_gtest.yaml  syrk_gtest.cpp  syrk_gtest.yaml  syrkx_gtest.cpp  syrkx_gtest.yaml  trmm_gtest.cpp  trmm_gtest.yaml  trsm_gtest.cpp  trsm_gtest.yaml  trtri_gtest.cpp  trtri_gtest.yaml
clients/gtest/blas_ex/: axpy_ex_gtest.cpp  axpy_ex_gtest.yaml  dot_ex_gtest.cpp  dot_ex_gtest.yaml  gemm_ex_gtest.cpp  gemm_ex_gtest.yaml  nrm2_ex_gtest.cpp  nrm2_ex_gtest.yaml  rot_ex_gtest.cpp  rot_ex_gtest.yaml  scal_ex_gtest.cpp  scal_ex_gtest.yaml  trsm_ex_gtest.cpp  trsm_ex_gtest.yaml
clients/gtest/solver/: gels_gtest.cpp  gels_gtest.yaml  geqrf_gtest.cpp  geqrf_gtest.yaml  getrf_gtest.cpp  getrf_gtest.yaml  getri_gtest.cpp  getri_gtest.yaml  getrs_gtest.cpp  getrs_gtest.yaml
clients/include/: arg_check.h  argument_model.hpp  bytes.hpp  cblas_interface.h  clients_common.hpp  complex.hpp  d_vector.hpp  device_batch_matrix.hpp  device_batch_vector.hpp  device_batched_matrix.hpp  device_batched_vector.hpp  device_matrix.hpp  device_strided_batch_matrix.hpp  device_strided_batch_vector.hpp  device_strided_batched_vector.hpp  device_vector.hpp  flops.h  flops.hpp  hipblas.hpp  hipblas_arguments.hpp  hipblas_common.yaml  hipblas_data.hpp  hipblas_datatype2string.hpp  hipblas_fortran.f90  hipblas_fortran.h.in  hipblas_fortran.hpp  hipblas_fortran_blas.f90  hipblas_fortran_blas_64.f90  hipblas_fortran_module.f90  hipblas_fortran_no_solver_module.f90  hipblas_fortran_solver.f90  hipblas_init.hpp  hipblas_matrix.hpp  hipblas_no_fortran.hpp  hipblas_parse_data.hpp  hipblas_smoke.yaml  hipblas_test.hpp  hipblas_unique_ptr.hpp  hipblas_vector.hpp  host_alloc.hpp  (+218 more)
clients/include/aux/: testing_set_get_atomics_mode.hpp  testing_set_get_matrix.hpp  testing_set_get_matrix_async.hpp  testing_set_get_pointer_mode.hpp  testing_set_get_vector.hpp  testing_set_get_vector_async.hpp
clients/include/auxil/: testing_set_get_atomics_mode.hpp  testing_set_get_matrix.hpp  testing_set_get_matrix_async.hpp  testing_set_get_vector.hpp  testing_set_get_vector_async.hpp
clients/include/blas1/: hipblas_iamax_iamin_ref.hpp  testing_asum.hpp  testing_asum_batched.hpp  testing_asum_strided_batched.hpp  testing_axpy.hpp  testing_axpy_batched.hpp  testing_axpy_strided_batched.hpp  testing_copy.hpp  testing_copy_batched.hpp  testing_copy_strided_batched.hpp  testing_dot.hpp  testing_dot_batched.hpp  testing_dot_strided_batched.hpp  testing_iamax_iamin.hpp  testing_iamax_iamin_batched.hpp  (+22 more)
clients/samples/: CMakeLists.txt  example-c.c  example_bfdot_hip_bfloat16.cpp  example_c.c  example_gemm_ex_fortran.F90  example_gemm_ex_fortran.f90  example_gemm_ex_v2.cpp  example_hgemm.cpp  example_hgemm_hip_half.cpp  example_hip_complex_her2.cpp  example_scal_ex_v2.cpp  example_sgemm.cpp  example_sgemm_strided_batched.cpp  example_sscal.cpp  example_sscal_fortran.F90  example_sscal_fortran.f90  example_strmm.cpp
(+384 files in other folders)
